Added new model LessonToken and classes for this model